# email-gateway-service

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celeryconfig.py  check_test_coverage.sh  config.py  docker-compose.yaml  env  pyproject.toml  pytest.ini  requirements.txt  run_migration.py  start_consumer.sh  start_web.sh
.github/workflows/: workflow.yml
app/: __init__.py  asgi.py  celery_app.py  constants.py  consumer.py  producer.py
app/api/api_v1/: __init__.py  api.py
app/core/: log.py
app/models/: __init__.py  account_model.py  base_model.py  batch_model.py  email_model.py  message_type_model.py  recipient_model.py
app/repositories/: __init__.py  account_repository.py  batch_repository.py  email_repository.py  message_type_repository.py  recipient_repository.py
app/services/: redis_service.py
app/tasks/: __init__.py  email_task.py
app/utils/: __init__.py  util.py  validators.py
logs/: README
migrations/: env.py
migrations/versions/: 60f2b3603728_email_model_add_column.py  6fc322b6d180_message_type_model_add_column.py  e1051c2e4db3_initial_migration_script.py
tests/: base_test_case.py  conftest.py  test_migration_scripts.py
tests/controllers/: __init__.py  test_account_controller.py  test_batch_controller.py  test_email_controller.py  test_message_type_controller.py  test_sender_id_controller.py  test_sms_controller.py  test_sms_task_controller.py
tests/data/: __init__.py  test_account_test_data.py  test_email_data.py  test_message_type_data.py  test_sender_id_data.py  test_sms_data.py
tests/model/: test_account_model.py  test_batch_model.py  test_email_model.py  test_message_type_model.py  test_recipient_model.py  test_sender_id_model.py  test_sms_model.py  test_sms_task_model.py
tests/tasks/: test_tasks.py
tests/utils/: __init__.py  mock_response.py
tests/views/: __init__.py  test_account_view.py  test_email_view.py  test_message_type_view.py  test_sender_id_view.py  test_sms_view.py
(+17 files in other folders)
